@@ -4,10 +4,11 @@ port, see http://www.gimp.org/tml/gimp/win32/ or
 http://www.iki.fi/tml/gimp/win32/ .
 
 To build GTk+ on Win32, you need either Microsoft compiler and tools,
-or egcs-1.1.2 running under cygwin-b20.1. Compile in gdk\win32 and gtk
-with `nmake -f makefile.msc` or `make -f makefile.cygwin`. Before
-doing a install, check the BIN definition in gdk\win32\makefile.msc
-(or makefile.cygwin) and gtk\makefile.msc (or makefile.cygwin).
+or egcs-1.1.2 (or gcc-2.95 or later) running under
+cygwin-b20.1. Compile in gdk\win32 and gtk with `nmake -f
+makefile.msc` or `make -f makefile.cygwin`. Before doing a install,
+check the BIN definition in gdk\win32\makefile.msc (or
+makefile.cygwin) and gtk\makefile.msc (or makefile.cygwin).
 
 See the README.win32 file in the GLib distribution for preparations to
 build with egcs on cygwin.
